# ecsql

./: .editorconfig  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md
articles/: 01-ecs-databases-en.md  01-ecs-databases-pt.md  02-prototyping-en.md  02-prototyping-pt.md  03-autoregister-components-en.md  03-autoregister-components-pt.md  04-tracking-time-en.md  04-tracking-time-pt.md  05-flyweight-resources-en.md  05-flyweight-resources-pt.md  06-accessing-save-data-en.md  06-accessing-save-data-pt.md
assets/: bullet.lua  bullet.toml  components.toml  create_player_ship.lua  create_target.lua  create_walls.lua  input_maps.lua  main.lua  main.toml  on_target_bullet_contact.lua  physics.lua  random_position_inside_screen.lua  save_data.lua  target.toml  tuning.lua  walls.lua
assets/autoload/: save_data.lua
assets/autoload/components/: bake_position.lua  move_on_arrows.lua  move_vector.lua  screen_rect.lua  spawn_on_action.lua  thrust_speed.lua  viewport2d.lua
assets/autoload/systems/: bake_relative_position.lua  destroy_on_out_of_screen.lua  move_on_arrows.lua  move_vector.lua  spawn_on_action.lua  update_parent_offset.lua  update_uptime_statistics.lua  update_viewport2d_camera.lua
assets/components/: delete_after.lua  destroy_on_out_of_screen.lua  init.lua  on_begin_contact.lua  parent_offset.lua  uptime_text.lua
assets/models/: cube.mtl
assets/systems/: delete_after_seconds.lua  init.lua  on_begin_contact.lua
assets/textures/: space_shooter_pack.xml
docs/: 01-ecs-databases-en.md  01-ecs-databases-pt.md  01-ecs-databases.md  02-prototyping-en.md  02-prototyping-pt.md  index.html  index.js  index.wasm
libs/: CMakeLists.txt  onelua.cpp
libs/sqlite-amalgamation/: CMakeLists.txt
sqlite-amalgamation/: CMakeLists.txt
src/: PreparedSQL.cpp  PreparedSQL.hpp  SQLRow.cpp  SQLRow.hpp  assetio.cpp  assetio.hpp  benchmark.cpp  benchmark.hpp  component.cpp  component.hpp  debug.cpp  debug.hpp  ecsql.cpp  ecsql.hpp  emscripten_shell.html  final_schema.sql  game_schema.sql  lua_globals.lua  lua_scripting.cpp  lua_scripting.hpp  main.cpp  memory.cpp  memory.hpp  screen.hpp  sqlite_functions.cpp  sqlite_functions.hpp  system.cpp  system.hpp  xml_utils.cpp  xml_utils.hpp
src/assetio/: assetio.cpp  assetio.hpp
src/components/: all_components.hpp  gameplay_components.hpp  raylib_components.cpp  raylib_components.hpp  tags.cpp  tags.hpp  texture_reference.cpp  texture_reference.hpp
src/ecsql/: PreparedSQL.cpp  PreparedSQL.hpp  SQLRow.cpp  SQLRow.hpp  additional_sql.cpp  additional_sql.hpp  assetio.cpp  assetio.hpp  background_system.cpp  background_system.hpp  benchmark.cpp  benchmark.hpp  component.cpp  component.hpp  ecsql.cpp  ecsql.hpp  entity.cpp  entity.hpp  executed_sql.cpp  executed_sql.hpp  fixed_delta_executor.hpp  hook_system.cpp  hook_system.hpp  is_optional.hpp  is_span.hpp  prepared_sql.cpp  prepared_sql.hpp  scene.cpp  scene.hpp  screen.hpp  serialization.cpp  serialization.hpp  sql_base_row.cpp  sql_base_row.hpp  sql_function.cpp  sql_function.hpp  sql_hook_row.cpp  sql_hook_row.hpp  sql_row.cpp  sql_row.hpp  (+15 more)
src/flyweights/: component_flyweight.hpp  image_flyweight.cpp  image_flyweight.hpp  line_strip_flyweight.cpp  line_strip_flyweight.hpp  material_flyweight.cpp  material_flyweight.hpp  model_flyweight.cpp  model_flyweight.hpp  scene_sql_flyweight.cpp  scene_sql_flyweight.hpp  sprite_flyweight.cpp  sprite_flyweight.hpp  texture_flyweight.cpp  texture_flyweight.hpp
src/physics/: physics.cpp  physics.hpp  physics_body.cpp  physics_body.hpp  physics_contact.cpp  physics_forces.cpp  physics_forces.hpp  physics_shape.cpp  physics_shape.hpp  physics_world.cpp  physics_world.hpp
src/resources/: line_strip.cpp  line_strip.hpp  sprite.hpp  sprite_db.cpp  sprite_db.hpp  texture_atlas.cpp  texture_atlas.hpp
src/scripting/: colors.cpp  colors.hpp  lua_globals.lua  lua_scripting.cpp  lua_scripting.hpp
src/systems/: bake_position.cpp  bake_position.hpp  bake_random_screen_position.cpp  bake_random_screen_position.hpp  components.cpp  destroy_on_out_of_screen.cpp  destroy_on_out_of_screen.hpp  draw_systems.cpp  draw_systems.hpp  key_handler.cpp  key_handler.hpp  move_on_arrows.cpp  move_on_arrows.hpp  move_vector.cpp  move_vector.hpp  rotate_on_hover.cpp  rotate_on_hover.hpp  screen_rect.cpp  screen_rect.hpp  spawn_at_most.cpp  spawn_at_most.hpp  spawn_moving_object.cpp  spawn_moving_object.hpp  spawn_scene_on_key.cpp  spawn_scene_on_key.hpp  yoga.cpp  yoga.hpp
tools/: asan.cmake  pack_assets.py
tools/lualib/: ecsql.lua  raylib_colors.lua
