add_library(sqlite3 "sqlite3.c")
target_include_directories(sqlite3 PUBLIC .)
target_compile_definitions(sqlite3
  PUBLIC
    "SQLITE_ENABLE_PREUPDATE_HOOK"
  PRIVATE
    "SQLITE_USE_URI"
    "SQLITE_DQS=0"
    "SQLITE_DEFAULT_MEMSTATUS=0"
    "SQLITE_DEFAULT_WAL_SYNCHRONOUS=1"
    "SQLITE_LIKE_DOESNT_MATCH_BLOBS"
    "SQLITE_MAX_EXPR_DEPTH=0"
    "SQLITE_OMIT_DECLTYPE"
    "SQLITE_OMIT_DEPRECATED"
    "SQLITE_OMIT_PROGRESS_CALLBACK"
    "SQLITE_OMIT_SHARED_CACHE"
    "SQLITE_USE_ALLOCA"
    "SQLITE_ENABLE_RTREE"
    "SQLITE_ENABLE_MATH_FUNCTIONS"
    "HAVE_ISNAN"
)
